--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,20 @@ jobs:
       - name: Run Go Test Suite
         run: |
           go test -v -cover ./...
+
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+            go-version: "1.23.0"
+
+      - name: Format Check
+        run: |
+          test -z $(go fmt ./...)
