--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,25 @@ jobs:
       - name: Format Check
         run: |
           test -z $(go fmt ./...)
+
+  linting:
+    name: Lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.0"
+
+      - name: Install Static Check
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+      
+      - name: Do Lint
+        run: |
+          staticcheck ./..
+      
