--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,22 @@ jobs:
         run: |
           go test -v -cover ./...
 
+      - name: Install GoSec
+        run : |
+          go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Do GoSec
+        run: |
+          gosec ./...
+
+      - name: Install govulncheck
+        run : |
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+
+      - name: Do govulncheck
+        run : |
+          govulncheck ./...
+
   style:
     name: Style
     runs-on: ubuntu-latest
