--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,47 @@ jobs:
       - name: Run Go Test Suite
         run: |
           go test -v -cover ./...
+
+      - name: Install GoSec
+        run : |
+          go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Do GoSec
+        run: |
+          gosec ./...
+
+      - name: Install govulncheck
+        if: ${{ false }} # disabling govulncheck for now
+        run : |
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+
+      - name: Do govulncheck
+        if: ${{ false }} # disabling govulncheck for now
+        run : |
+          govulncheck ./...
+
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+            go-version: "1.23.0"
+
+      - name: Format Check
+        run: |
+          test -z $(go fmt ./...)
+
+      - name: Install Static Check
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+      
+      - name: Do Lint
+        run: |
+          staticcheck ./...
+
