--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Build
+      - name: buildprod.shd
         run: |
           ./scripts/buildprod.sh
 
