--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,3 +25,14 @@ jobs:
         run: |
           ./scripts/buildprod.sh
 
+      - name: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS}}'
+
+      - name: Setup Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: gcloud builds submit
+        run: |
+          gcloud builds submit --tag us-central1-docker.pkg.dev/notely-462600/notely-ar-repo/notely:latest .
