--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,8 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{secrets.DATABASE_URL}}
     timeout-minutes: 10
 
     steps:
@@ -21,9 +23,17 @@ jobs:
         with:
           go-version: "1.23.0"
 
+      - name: install goose
+        run: |
+          go install github.com/pressly/goose/v3/cmd/goose@latest
+
       - name: buildprod.shd
         run: |
           ./scripts/buildprod.sh
+
+      - name: migrateup.sh
+        run: |
+          ./scripts/migration.sh
 
       - name: auth
         uses: google-github-actions/auth@v2
